--- a/SymbolFilterServer/SymbolFilterServer.csproj
+++ b/SymbolFilterServer/SymbolFilterServer.csproj
@@ -8,6 +8,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Hosting" Version="1.1.2" />
     <PackageReference Include="Microsoft.AspNetCore.Server.Kestrel" Version="1.1.2" />
+    <PackageReference Include="System.CommandLine" Version="0.1.0-e170531-2" />
   </ItemGroup>
 
 </Project>
