--- a/SymbolFilterServer/SymbolFilterServer.csproj
+++ b/SymbolFilterServer/SymbolFilterServer.csproj
@@ -7,7 +7,9 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Hosting" Version="1.1.2" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="1.1.2" />
     <PackageReference Include="Microsoft.AspNetCore.Server.Kestrel" Version="1.1.2" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="1.1.2" />
     <PackageReference Include="System.CommandLine" Version="0.1.0-e170531-2" />
   </ItemGroup>
 
