--- a/SymbolFilterServer/SymbolFilterServer.csproj
+++ b/SymbolFilterServer/SymbolFilterServer.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp1.1</TargetFramework>
+    <RuntimeIdentifiers>win7-x86</RuntimeIdentifiers>
   </PropertyGroup>
 
   <ItemGroup>
